# project_legion

./: CMakeLists.txt  package.xml  readme.md
.github/workflows/: project_legion_git_ci.yml
Solidworks Model/Robot/: Arena.SLDPRT  chassis part 2.SLDPRT  chassis part 3.SLDPRT  chassis.SLDPRT  lidar.SLDPRT  robotaxi.SLDASM
config/: control.yaml
images/: action_1  basge
include/project_legion/: project.hpp
launch/: debug.launch.py  display.launch.py  gazebo.launch.py  gazebo_launch.py  robot_launch.py  robot_state_publisher.launch.py  robotaxi.launch.py  spawn_robot_ros2.launch.py  spawn_turtlebot3.launch.py  system.py
meshes/: back.STL  back_left_axel.STL  back_left_lidar.STL  back_left_wheel.STL  back_right_axel.STL  back_right_lidar.STL  back_right_wheel.STL  base_link.STL  front.STL  front_left_axel.STL  front_left_lidar.STL  front_left_wheel.STL  front_right_axel.STL  front_right_lidar.STL  front_right_wheel.STL  lidar_back_left.STL  lidar_back_right.STL  lidar_front_left.STL  lidar_front_right.STL  right.STL  side_pane_1.STL  side_pane_2.STL  side_pane_3.STL  side_pane_4.STL  top.STL
robotaxi/: CMakeLists.txt  package.xml
robotaxi/config/: joint_names_robotaxi.yaml
robotaxi/launch/: display.launch  gazebo.launch
robotaxi/meshes/: back_left_wheel.STL
rviz/: robotaxi.rviz  rviz.rviz
scripts/: generate_coverage_report.bash  key_board.py  publisher.cpp  ref.py  teleop.py
solidworks/Robot/: chassis part 4.SLDPRT  coupling.SLDPRT  robotaxi.SLDASM  wheel.SLDPRT
src/: project.cpp
test/: test.cpp
urdf/: colors.xacro  robotaxi.csv  robotaxi.urdf  robotaxi.urdf.xacro
urdf/controllers/: frontaxleleft.ros2_control.xacro  frontaxleright.ros2_control.xacro  frontwheelleft.ros2_control.xacro  frontwheelright.ros2_control.xacro  rearaxleleft.ros2_control.xacro  rearaxleright.ros2_control.xacro  rearwheelleft.ros2_control.xacro  rearwheelright.ros2_control.xacro
